--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "remax": "^2.0.0",
+    "remax-iconfont-component": "^1.0.0",
+    "remax-iconfont-plugin": "^1.0.0",
     "webpack-virtual-modules": "^0.2.2"
   },
   "devDependencies": {
