--- a/packages/remax-iconfont-component/tsconfig.json
+++ b/packages/remax-iconfont-component/tsconfig.json
@@ -70,5 +70,5 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "include": ["src/"],
-  "exclude": []
+  "exclude": ["dist/", "node_module/"]
 }
