--- a/example/package.json
+++ b/example/package.json
@@ -20,6 +20,7 @@
     "webpack-virtual-modules": "^0.2.2"
   },
   "devDependencies": {
-    "@types/react": "^16.9.27"
+    "@types/react": "^16.9.27",
+    "cross-env": "^7.0.2"
   }
 }
